# OsuBoard

./: OsuBoard.step  README.md
Firmware/: CMakeLists.txt  OsuBoard.ioc
Firmware/Drivers/: CMakeLists.txt
Firmware/Inc/: main.h
Firmware/Middlewares/: CMakeLists.txt
Firmware/Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Firmware/Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
Firmware/OsuBoard/: .mxproject  OsuBoard.ioc
Firmware/OsuBoard/Inc/: mxconstants.h
Firmware/OsuBoard/MDK-ARM/: OsuBoard.uvprojx  startup_stm32f103xb.lst
Firmware/OsuBoard/MDK-ARM/RTE/: RTE_Components.h
Firmware/OsuBoard/Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Firmware/OsuBoard/Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
Firmware/OsuBoard/Src/: main.c  stm32f1xx_it.c  usbd_conf.c
Firmware/Src/: main.c
SchPcb/: OsuBoard.PcbDoc  OsuBoard.PcbLib  OsuBoard.SchDoc  osuBoard.IntLib  osuBoard.OutJob  osuBoard.PrjPcb
